Locations page spacing fixes

--- a/wp-content/plugins/MapListPro/css/MapListProCore.css
+++ b/wp-content/plugins/MapListPro/css/MapListProCore.css
@@ -633,7 +633,7 @@ body .infoWindowContainer .infoWindow h3 span{font-size:13px;}
 /*Message*/
 .prettyMapList .prettyMessage{
     font-family: "brandon-grotesque",sans-serif;
-    width: 48.6%;
+    width: 100%;
     padding: 10px 10px 20px 35px;
     background:white;
 	/*position:relative;*/
